--- a/AndroidClient/app/src/main/res/layout/fragment_categories.xml
+++ b/AndroidClient/app/src/main/res/layout/fragment_categories.xml
@@ -13,8 +13,12 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   -->
-
-<android.support.v7.widget.RecyclerView
+<android.support.v4.widget.SwipeRefreshLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/swipe_refresh_layout"
+    android:layout_height="match_parent"
+    android:layout_width="match_parent">
+    <android.support.v7.widget.RecyclerView
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
@@ -28,3 +32,5 @@
         app:layoutManager="android.support.v7.widget.GridLayoutManager"
         android:transitionGroup="false"
         app:spanCount="2" tools:ignore="UnusedAttribute" />
+</android.support.v4.widget.SwipeRefreshLayout>
+
