Can display course detail now;\nfix bug lacking course in student client.\nAlter the Json class from set to map

--- a/AndroidClient/app/src/main/res/layout/activity_quiz.xml
+++ b/AndroidClient/app/src/main/res/layout/activity_quiz.xml
@@ -57,12 +57,11 @@
                          android:background="@drawable/selector_subtle"/>
         </FrameLayout>
 
-        <FrameLayout android:layout_width="match_parent"
-                     android:layout_height="match_parent"
-                     android:layout_gravity="center">
-
-
-            
+        <FrameLayout
+            android:id="@+id/content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center">
         </FrameLayout>
     </LinearLayout>
 
