--- a/AndroidClient/app/src/main/res/layout/activity_quiz.xml
+++ b/AndroidClient/app/src/main/res/layout/activity_quiz.xml
@@ -33,6 +33,7 @@
         <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
+
             <TextView android:id="@+id/category_title"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
@@ -64,7 +65,12 @@
             android:layout_gravity="center">
         </FrameLayout>
     </LinearLayout>
-
+    <ProgressBar
+        android:id="@+id/progress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:visibility="invisible"/>
     <!-- Scale is being used during entry animation -->
     <android.support.design.widget.FloatingActionButton
             android:id="@+id/fab_quiz"
