--- a/AndroidClient/app/src/main/res/layout/fragment_course_info.xml
+++ b/AndroidClient/app/src/main/res/layout/fragment_course_info.xml
@@ -10,7 +10,8 @@
         android:orientation="vertical"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="70dp"
         >
 
         <LinearLayout
